--- a/src/Pages/RegisterPage/RegisterPage.css
+++ b/src/Pages/RegisterPage/RegisterPage.css
@@ -1,6 +1,16 @@
+.container_log{
+    padding-top: 10%;
+    width: 100vw;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(184deg, rgba(255,255,255,1) 0%, rgba(189,189,189,1) 99%);
+    
+}
 .container{
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -46,7 +56,7 @@
     outline: none;
     border-bottom: 1px solid grey;
 }
-.fullName,.phone,.mail,.password{
+.gender,.thana,.first_name,.username,.dob,.phone,.nid,.last_name,.address,.walk_type,.phone,.phone,.mail,.password{
     position: absolute;
     top: 50%;
     left: 20px;
@@ -87,6 +97,7 @@
 }
 @media screen and (max-width:430px){
     .container{
+        padding-top: 100px;
         width: 100vw;
         height: 100vh;
         display: flex;
@@ -109,6 +120,7 @@
 }
 @media screen and (max-width:1024px){
     .container{
+        padding-top: 100px;
         width: 100vw;
         height: 100vh;
         display: flex;
