--- a/src/Pages/WalkingBuddy/Buddylist.css
+++ b/src/Pages/WalkingBuddy/Buddylist.css
@@ -18,8 +18,9 @@
    color:rgb(249,106,2);
 
 }
-.mew{   background-color: rgb(249, 106, 2);
-        border-color: rgb(249, 106, 2);
+.mew{   
+  background-color: rgb(249, 106, 2);
+  border-color: rgb(249, 106, 2);
       }
       .mew:active {
         background-color: #ff8500; /* Adjust hover color as needed */
