--- a/src/Components/EditPro/EditPro.css
+++ b/src/Components/EditPro/EditPro.css
@@ -83,13 +83,13 @@ body{margin-top:20px;
   }
   
   .modal-content {
-    background-color: white;
+    background-color: #808080
+    ;;
     padding: 20px;
     border-radius: 5px;
+    align-items: center;
     text-align: center;
   }
-  
-  /* Processing circle styles */
   .processing-circle {
     border: 4px solid rgba(0, 0, 0, 0.1);
     border-left-color: #333;
