--- a/src/Pages/Chat/Chat.css
+++ b/src/Pages/Chat/Chat.css
@@ -6,6 +6,12 @@
     position: relative;
     width: 100%;
 }
+.right{
+    margin-left: 10px;
+}
+.chat-message{
+    bottom: 0;
+}
 .chat-app .people-list {
     width: 280px;
     position: absolute;
@@ -68,6 +74,9 @@
 .people-list .status {
     color: #999;
     font-size: 13px
+}
+.chat {
+    padding-left: 10px;
 }
 
 .chat .chat-header {
