--- a/src/Components/EditPro/Overseer/Overseer.css
+++ b/src/Components/EditPro/Overseer/Overseer.css
@@ -1,6 +1,10 @@
 .custom-modal .modal-dialog {
     max-width: 20vh; /* 50% of the viewport width */
 }
+.custom-modal .modal-content {
+    background-color: white;
+  }
+  
 .Sugg-comp{
     margin-top: 20px;
     width: 100%;
