--- a/src/Components/GroupProfile/ProfileComponents/InfoProfile/Info.css
+++ b/src/Components/GroupProfile/ProfileComponents/InfoProfile/Info.css
@@ -342,5 +342,7 @@
     .coverDiv svg{
         font-size: 19px;
     }
-    
+    .custom-modal .modal-content {
+        background-color: white;
+      }      
 }
