--- a/src/Pages/WalkingBuddy/Buddylist.css
+++ b/src/Pages/WalkingBuddy/Buddylist.css
@@ -31,4 +31,8 @@
         border-color: #ff8500; /* Adjust hover color as needed */
       } 
 
+      .custom-modal .modal-content {
+        background-color: white;
+      }      
+
       
