--- a/src/Components/Post/InputPost.css
+++ b/src/Components/Post/InputPost.css
@@ -63,7 +63,7 @@
 }
 .pv-upload{
     display: flex;
-    justify-content: start;
+    justify-content:flex-start ;
     align-items: center;
     cursor: pointer;
 }
